# analytics-framework

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
analytics_framework/: __init__.py
analytics_framework.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
analytics_framework/analytics/: __init__.py  metrics.py
analytics_framework/core/: config.py  exceptions.py  logger.py  pipeline.py  pipeline_step.py
analytics_framework/export/: __init__.py  dataframe_export.py
analytics_framework/features/: __init__.py  transformers.py
analytics_framework/ingestion/: __init__.py  csv_loader.py
analytics_framework/quality/: __init__.py  validators.py
analytics_framework/reporting/: __init__.py  markdown.py
analytics_framework/visualization/: __init__.py  plots.py
docs/: architecture.md  code_quality.md
examples/: config_examples.yaml  demo_config.py  demo_data_quality.py  demo_error_handling.py  demo_export.py  demo_framework.py  demo_ingestion.py  demo_logger.py  demo_metrics.py  demo_reporting.py  demo_transformations.py  demo_visualization.py  test_error_handling.py  test_framework.py
tests/: test_config.py  test_data_quality.py  test_error_handling.py  test_export.py  test_ingestion.py  test_metrics.py  test_pipeline.py  test_reporting.py  test_transformers.py  test_visualization.py
