[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics-framework"
version = "0.1.0"
description = "Reusable analytics framework for BI, Data Science and Machine Learning projects."
authors = [
    {name = "Adrien Monteiro"}
]

readme = "README.md"

requires-python = ">=3.11"

dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "openpyxl",
    "python-docx"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["analytics_framework*"]