[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics-framework"
version = "0.1.0"
description = "Reusable analytics framework for BI, Data Science and Machine Learning projects."
authors = [
    {name = "Adrien Monteiro"}
]

readme = "README.md"

requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "openpyxl",
    "python-docx",
    "pyyaml"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["analytics_framework*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"